# DSCSTools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  THIRD-PARTY-NOTICE  savedecrypt.bat  saveencrypt.bat  structure.json
.github/: FUNDING.yml
.github/workflows/: cmake.yml
DSCSTools/: AFS2.cpp  AFS2.h  CMakeLists.txt  DSCSTools.cpp  DSCSTools.h  EXPA.cpp  EXPA.h  MDB1.cpp  MDB1.h  SaveFile.cpp  SaveFile.h  python.cpp
DSCSTools/include/: AFS2.h  EXPA.h  MDB1.h  SaveFile.h  shared_export.h
DSCSTools/structures/: animation_loop_data.json  battle_ai.json  battle_bgm.json  battle_camera.json  battle_command.json  battle_command_effect.json  battle_effect.json  battle_field.json  battle_se.json  battle_support_skill.json  battle_voice.json  bbs_post_para.json  colosseum_event_battle.json  colosseum_item.json  custom_sound.json  debug_event_view.json  digiline_constant.json  digiline_para.json  digimon_common_para.json  digimon_farm_para.json  digimon_list.json  digimon_market_para.json  digital_space_para.json  eden_text_para.json  equip_para.json  evolution_condition.json  evolution_direction_para.json  evolution_next_para.json  experience_table.json  farm_constant.json  farm_development.json  farm_give_food.json  farm_goods.json  farm_investigation.json  farm_talk.json  farm_training.json  field_ap_para.json  field_area_para.json  field_area_para_add.json  field_common_param.json  (+63 more)
DSCSToolsCLI/: CMakeLists.txt  DSCSTools.cpp
cmake/: DeployQt.cmake
docs/: notes.txt  similarStructures.txt  structureCoverage.txt
docs/squirrel/builtin/: Battle.txt  Colosseum.txt  Common.txt  Costume.txt  DLC.txt  Debug.txt  Digilab.txt  Digiline.txt  Digimon.txt  Domination.txt  Effect.txt  Fade.txt  Field.txt  Flag.txt  Item.txt  Keyword.txt  Math.txt  Medal.txt  Movie.txt  PostEffect.txt  Quake.txt  Quest.txt  Shop.txt  Sound.txt  Talk.txt  Util.txt  Vista.txt  Window.txt  Work.txt  test.txt  this.txt
docs/structures/: battle_command.txt  evolution_condition.txt  item_para.txt  lvup_para.txt  shop_para.txt  support_skill.txt
libs/csv-parser/: LICENSE  parser.hpp
libs/doboz/: CMakeLists.txt  COPYING.txt  Compressor.cpp
